2019-1/231/users/4229/executions/1678_1396.log
== TEST (2019-04-16 18:58:06) 
-- CODE:
x = float(input("Valor consumido"))
valortotal=x+0.1x
if(x=<300):
	valortotal=x+0.1x
	print(valortotal)
-- ERROR:
File "XXXX", line 2
    valortotal=x+0.1x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:58:14) 
-- CODE:
x = float(input("Valor consumido"))
if(x=<300):
	valortotal=x+0.1x
	print(valortotal)
-- ERROR:
File "XXXX", line 2
    if(x=<300):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:58:30) 
-- CODE:
x = float(input("Valor consumido"))
if(x=<"300"):
	valortotal=x+0.1x
	print(valortotal)
-- ERROR:
File "XXXX", line 2
    if(x=<"300"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:59:20) 
-- CODE:
x = float(input("Valor consumido"))
if(x=<"300"):
	valortotal=x+0.1x
	print(round(valortotal,2))
-- ERROR:
File "XXXX", line 2
    if(x=<"300"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:00:14) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x=<"300"):
	valortotal=x+0.1x
	print(round(valortotal,2))
-- ERROR:
File "XXXX", line 2
    if(x=<"300"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:00:15) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x=<"300"):
	valortotal=x+0.1x
	print(round(valortotal,2))
-- ERROR:
File "XXXX", line 2
    if(x=<"300"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:00:41) 
-- CODE:
x = float(input("Valorconsumido: "))
ifx=<"300":
	valortotal=x+0.1x
	print(round(valortotal,2))
else()
-- ERROR:
File "XXXX", line 2
    ifx=<"300":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:01:23) 
-- CODE:
x = float(input("Valorconsumido: "))
if x=<"300":
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal
-- ERROR:
File "XXXX", line 2
    if x=<"300":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:01:31) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x=<"300"):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal
-- ERROR:
File "XXXX", line 2
    if(x=<"300"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:03:06) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x=<300):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal=
-- ERROR:
File "XXXX", line 2
    if(x=<300):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:03:56) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x<=300):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal=x
-- ERROR:
File "XXXX", line 3
    valortotal=x+0.1x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:04:12) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x<="300"):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal=x
-- ERROR:
File "XXXX", line 3
    valortotal=x+0.1x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:04:30) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x<=300):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal=x
-- ERROR:
File "XXXX", line 3
    valortotal=x+0.1x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:05:21) 
-- CODE:
x = float(input("Valorconsumido: "))
if(x<=300):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal=x+0.06x
	print(round(valortotal,2))
-- ERROR:
File "XXXX", line 3
    valortotal=x+0.1x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:00) 
-- CODE:
x = float(input("valor: "))
if(x<=300):
	valortotal=x+0.1x
	print(round(valortotal,2))
else:
	valortotal=x+0.06x
	print(round(valortotal,2))
-- ERROR:
File "XXXX", line 3
    valortotal=x+0.1x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:28) 
-- CODE:
x = float(input("valor: "))
if(x<=300):
	valortotal=x+(0.1*x)
	print(round(valortotal,2))
else:
	valortotal=x+0.06x
	print(round(valortotal,2))
-- ERROR:
File "XXXX", line 6
    valortotal=x+0.06x
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:39) 
-- CODE:
x = float(input("valor: "))
if(x<=300):
	valortotal=x+(0.1*x)
	print(round(valortotal,2))
else:
	valortotal=x+(0.06*x)
	print(round(valortotal,2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:07:46) 
-- CODE:
x = float(input("valor: "))
if(x<=300):
	valortotal=x+(0.1*x)
	print(round(valortotal,2))
else:
	valortotal=x+(0.06*x)
	print(round(valortotal,2))
-- EXECUTION TIME:
0.187723
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.06
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
